@@ -1,31 +1,43 @@
 package com.dotcms.rendering.velocity.viewtools.content.util;
 
+import com.dotcms.api.web.HttpServletRequestThreadLocal;
+import com.dotcms.api.web.HttpServletResponseThreadLocal;
 import com.dotcms.content.elasticsearch.business.ESMappingAPIImpl;
 import com.dotcms.rendering.velocity.viewtools.content.PaginatedContentList;
+import com.dotcms.rest.ContentResource;
+import com.dotcms.rest.api.v1.DotObjectMapperProvider;
+import com.dotcms.util.ConversionUtils;
 import com.dotcms.util.TimeMachineUtil;
 import com.dotmarketing.beans.Identifier;
 import com.dotmarketing.business.APILocator;
 import com.dotmarketing.business.web.WebAPILocator;
 import com.dotmarketing.common.model.ContentletSearch;
 import com.dotmarketing.exception.DotDataException;
+import com.dotmarketing.exception.DotRuntimeException;
 import com.dotmarketing.exception.DotSecurityException;
 import com.dotmarketing.portlets.calendar.business.RecurrenceUtil;
 import com.dotmarketing.portlets.contentlet.business.ContentletAPI;
 import com.dotmarketing.portlets.contentlet.model.Contentlet;
 import com.dotmarketing.portlets.contentlet.model.ContentletVersionInfo;
 import com.dotmarketing.portlets.structure.model.Relationship;
+import com.dotmarketing.util.Config;
 import com.dotmarketing.util.Logger;
 import com.dotmarketing.util.PageMode;
 import com.dotmarketing.util.PaginatedArrayList;
 import com.dotmarketing.util.UtilMethods;
+import com.dotmarketing.util.WebKeys;
+import com.dotmarketing.util.json.JSONObject;
 import com.liferay.portal.model.User;
 
 import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -37,8 +49,11 @@ import java.util.stream.Collectors;
  * @since 1.9.3
  */
 public class ContentUtils {
-	
-	   private static ContentletAPI conAPI;
+
+	// it is true, even if the pattern is false because the client has to include the depth parameter to activate it
+	private static final boolean addRelationshipsOnPage = Config.getBooleanProperty("ADD_RELATIONSHIPS_ON_PAGE", true);
+
+	private static ContentletAPI conAPI;
 	   public static final ContentUtils INSTANCE = new ContentUtils();
 
 	    private ContentUtils() {
@@ -157,7 +172,7 @@ public class ContentUtils {
 		 * @return  Returns empty List if no results are found
 		 */
 		public static List<Contentlet> pull(String query, String limit, String sort,User user, String tmDate){
-				int l = new Integer(limit);
+				int l = Integer.valueOf(limit);
 				return pull(query, l, sort, user, tmDate);
 		}
 		
@@ -333,7 +348,7 @@ public class ContentUtils {
 		 */
 		public static PaginatedContentList<Contentlet> pullPerPage(String query, int currentPage, int contentsPerPage, String sort, User user, String tmDate){
 			PaginatedArrayList<Contentlet> cmaps = pullPagenated(query, contentsPerPage, contentsPerPage * (currentPage - 1), sort, user, tmDate);
-			PaginatedContentList<Contentlet> ret = new PaginatedContentList<Contentlet>();
+			PaginatedContentList<Contentlet> ret = new PaginatedContentList<>();
 			
 			if(cmaps.size()>0){
 				long minIndex = (currentPage - 1) * contentsPerPage;
@@ -386,7 +401,7 @@ public class ContentUtils {
 	                // as we need to load contentlets anyway to sort 
 	                // lets just call pull here
 	                List<Contentlet> conts=pull(query, limit, sort, user, tmDate);
-	                ret = new ArrayList<ContentletSearch>(conts.size());
+	                ret = new ArrayList<>(conts.size());
 	                for(Contentlet cm : conts) {
 	                    ContentletSearch cs=new ContentletSearch();
 	                    cs.setInode((String)cm.get("inode"));
@@ -402,7 +417,7 @@ public class ContentUtils {
 				Logger.error(ContentUtils.class,e.getMessage(),e);
 			}
 			if(ret == null){
-				ret = new ArrayList<ContentletSearch>();
+				ret = new ArrayList<>();
 			}
 			return ret;
 		}
@@ -748,6 +763,72 @@ public class ContentUtils {
 			q+=" +deleted:false ";
 		}
 		return q;
+	}
+
+
+	/**
+	 * Adds the relationships to the contentlet based on the request parameters depth
+	 * @param contentlet
+	 * @param user
+	 * @param mode
+	 * @param languageId
+	 */
+	public static void addRelationships(final Contentlet contentlet, final User user, final PageMode mode, final long languageId) {
+
+		final HttpServletRequest  request  = HttpServletRequestThreadLocal.INSTANCE.getRequest();
+		final HttpServletResponse response = HttpServletResponseThreadLocal.INSTANCE.getResponse();
+		if (addRelationshipsOnPage &&
+				Objects.nonNull(response) &&
+				Objects.nonNull(request) &&
+				Objects.nonNull(user) &&
+				Objects.nonNull(request.getParameter(WebKeys.HTMLPAGE_DEPTH))
+			) {
+
+			final int depth = ConversionUtils.toInt(request.getParameter(WebKeys.HTMLPAGE_DEPTH), -1);
+			addRelationships(contentlet, user, mode, languageId, depth, request, response);
+		}
+	}
+
+	/**
+	 * Adds the relationships to the contentlet based on depth argument
+	 * @param contentlet
+	 * @param user
+	 * @param mode
+	 * @param languageId
+	 * @param depth
+	 * @param request
+	 * @param response
+	 */
+	public static void addRelationships(final Contentlet contentlet, final User user, final PageMode mode,
+										final long languageId, final int depth, final HttpServletRequest  request,
+										final HttpServletResponse response) {
+
+		if (depth >= 0 && depth <= 3) {
+
+			try {
+
+				final JSONObject jsonWithRelationShips = ContentResource.addRelationshipsToJSON(request, response,
+						request.getParameter("render"), user, depth, mode.respectAnonPerms, contentlet,
+						new JSONObject(), null, languageId, mode.showLive, false,
+						true);
+
+				final HashMap<String,Object> relationshipsMap = DotObjectMapperProvider.getInstance()
+						.getDefaultObjectMapper().readValue(jsonWithRelationShips.toString(), HashMap.class);
+
+				if (UtilMethods.isSet(relationshipsMap)) {
+					contentlet.getMap().putAll(relationshipsMap);
+				}
+			} catch (Exception e) {
+
+				Logger.error(ContentUtils.class, "Error, contentlet id:" +
+						contentlet.getIdentifier() + ", msg:" + e.getMessage(), e);
+				throw new DotRuntimeException(e);
+			}
+		} else {
+
+			throw new IllegalArgumentException("Depth must be a number between 0 and 3");
+		}
+
 	}
 		
 }
